[package]
name = "jab-rpa"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "winbase"] }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
bindgen = "0.72.1"
cc = "1.2.61"
