[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "jab-rpa"
dynamic = ["version"]
description = "Python client for jab-rpa — automate 32-bit Java applications from 64-bit Python"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
authors = [{ name = "carou-c", email = "carolcorrea555@gmail.com" }]
dependencies = [
    "grpcio>=1.80.0,<2.0",
    "pyautogui>=0.9.54,<0.10",
    "betterproto2>=0.9.1,<0.10",
    "types-pyautogui",
    "pywin32>=311 ; sys_platform == 'win32'",
    "types-pywin32",
]

[dependency-groups]
dev = [
    "betterproto2-compiler>=0.9.0",
    "grpcio-tools>=1.80.0",
    "mkdocs>=1.6.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "wheel>=0.47",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning.from-file]
source = "Cargo.toml"
pattern = '^version = "(.+)"$'

[tool.hatch.build]
artifacts = ["python/jab_rpa/bin/**/*.exe"]

[tool.hatch.build.targets.wheel]
packages = ["python/jab_rpa"]
pure-python = false
