[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "jab-rpa"
dynamic = ["version"]
description = "Python client for jab-rpa — automate Java desktop applications from Python"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
authors = [{ name = "carou-c", email = "carolcorrea555@gmail.com" }]
dependencies = [
    "grpcio>=1.80.0,<2.0",
    "pyautogui>=0.9.54,<0.10",
    "betterproto2>=0.9.1,<0.10",
    "types-pyautogui",
    "pywin32>=311 ; sys_platform == 'win32'",
    "types-pywin32",
]

[dependency-groups]
dev = [
    "betterproto2-compiler>=0.9.0",
    "grpcio-tools>=1.80.0",
    "mkdocs>=1.6.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "wheel>=0.47",
]

[project.optional-dependencies]
java8 = ["jab-rpa-bin-java8"]
java11 = ["jab-rpa-bin-java11"]
java17 = ["jab-rpa-bin-java17"]
java21 = ["jab-rpa-bin-java21"]
java25 = ["jab-rpa-bin-java25"]

[tool.uv.sources]
jab-rpa-bin-java8 = { workspace = true }
jab-rpa-bin-java11 = { workspace = true }
jab-rpa-bin-java17 = { workspace = true }
jab-rpa-bin-java21 = { workspace = true }
jab-rpa-bin-java25 = { workspace = true }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning.from-file]
source = "Cargo.toml"
pattern = '^version = "(.+)"$'

[tool.hatch.build.targets.wheel]
packages = ["python/jab_rpa"]

[tool.uv.workspace]
members = ["packages/*"]
