[project]
name = "jab-rpa-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carolina Helena da Silva Corrêa", email = "carolcorrea555@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "betterproto2-compiler>=0.9.0",
    "grpcio>=1.80.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

