[package]
name = "jab-rpa-server"
version = "0.0.4"
edition = "2024"

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "winbase"] }
tonic-prost = "0.14.5"
regex = "1"

[build-dependencies]
tonic-prost-build = { version = "0.14" } # , features = ["prost"] }
bindgen = "0.72.1"
cc = "1.2.61"
