[package]
name = "jab-rpa-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tonic-prost = "0.14"
regex = "1.12"
jab-wrapper = { path = "../wrapper" }

[build-dependencies]
tonic-prost-build = { version = "0.14" }
