[package]
name = "jab-rpa-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tonic-prost = "0.14"
jab-wrapper = { path = "../wrapper" }
windows = "0.62.2"
parking_lot = "0.12.5"
clap = { version = "4.6.4", features = ["derive"] }
anyhow = "1.0.104"

[build-dependencies]
tonic-prost-build = { version = "0.14" }
