[package]
name = "jab-wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chumsky = "0.13.0"
logos = "0.16.1"
regex = "1.12.3"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
jab-sys = { path = "../sys" }
crossbeam = "0.8.4"
